#4 Hero with CTA overlay on Location Detail page  - fixed width of image, h1 for location hero  - swapped order of map/info on mobile  - removed bootstrap dropshadow for modal

--- a/content/sci/css/core/modules/_heading.scss
+++ b/content/sci/css/core/modules/_heading.scss
@@ -2,27 +2,27 @@
 @import "../base/mixins";
 
 h1, h2, h3 {
-	@include font-header();
+    @include font-header();
 }
 
 h1 {
-	@include rem-fallback(font-size, 30px / 16px);
+    @include rem-fallback(font-size, 30px / 16px);
 }
 
 h2 {
-	@include rem-fallback(font-size, 18px / 16px);
+    @include rem-fallback(font-size, 18px / 16px);
 
-	&.large {
-		@include rem-fallback(font-size, 24px / 16px);
-	}
+    &.large {
+        @include rem-fallback(font-size, 24px / 16px);
+    }
 }
 
 h3 {
-	@include rem-fallback(font-size, 16px / 16px);
+    @include rem-fallback(font-size, 16px / 16px);
 
-	&.strong, &.h4, &.h5, &.h6 {
-		@include font-family(Lato-Bold);
-	}
+    &.strong, &.h4, &.h5, &.h6 {
+        @include font-family(Lato-Bold);
+    }
 }
 
 
@@ -30,6 +30,8 @@ h3 {
 
     @include font-uppercase();
     @include font-family(Lato-Bold);
+    font-style: normal;
+    font-weight: bold;
     font-size: 16px;
 
     &.strong {
@@ -39,27 +41,27 @@ h3 {
 
 
 @include if-min(md) {
-	h1 {
-		@include rem-fallback(font-size, 50px / 16px);
-	}
+    h1 {
+        @include rem-fallback(font-size, 50px / 16px);
+    }
 
-	h2 {
-		@include rem-fallback(font-size, 30px / 16px);
+    h2 {
+        @include rem-fallback(font-size, 30px / 16px);
 
-		&.large {
-			@include rem-fallback(font-size, 40px / 16px);
-		}
-	}
+        &.large {
+            @include rem-fallback(font-size, 40px / 16px);
+        }
+    }
 
-	h3 {
-		@include rem-fallback(font-size, 25px / 16px);
+    h3 {
+        @include rem-fallback(font-size, 25px / 16px);
 
-		&.h4 {
-			@include rem-fallback(font-size, 20px / 16px);
-		}
+        &.h4 {
+            @include rem-fallback(font-size, 20px / 16px);
+        }
 
-		&.h5 {
-			@include rem-fallback(font-size, 16px / 16px);
-		}
-	}
+        &.h5 {
+            @include rem-fallback(font-size, 16px / 16px);
+        }
+    }
 }
